Database connectivity and Login authentication

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
     <section class="header">
         
     </section>
-    <form id="loginForm" method="post" action="/users" onsubmit="return validateForm()">
+    <form id="loginForm" method="post" action="/login" onsubmit="return validateForm()">
         <h1 align="center">Login to <span>Reverie</span></h1>
         <div class="text">
             <input type="text" name="username" id="username" placeholder="Username" required>
